...
    <string name="action_cancel">Cancel</string>
    <string name="action_exit">Exit</string>
    <string name="action_exit_menu">Close Menu\'application</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Preferences</string>
    <string name="action_create">New</string>
    <string name="action_report">Report</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save as</string>
    <string name="action_delete_path">Cancel path</string>
    <string name="action_delete_all_comment">Erase all comments</string>
    <string name="action_close_audit">Close Audit\'audit</string>
    <string name="action_export_audit_docx">Generate Report</string>
    <string name="action_update">Edit</string>
    <string name="action_remove">Delete</string>
    <string name="action_lock">Lock</string>
    <string name="action_close">Close</string>
    <string name="action_sort">Sort</string>
    <string name="action_comment">Comments</string>
    <string name="action_rules">Rules</string>
    <string name="action_complete">Complete</string>
    <string name="action_ruleset">Display Rules</string>
    <string name="title_context">Path objects Menu</string>
...
    <string name="audit_object_badglobaleresponse_message">You have to select at least one appropriate rule</string>

    <string name="audit_object_button_previous">Previous</string>
    <string name="audit_object_button_next">Next</string>
    <string name="audit_object_button_back">Back</string>
    <string name="audit_object_button_validate">Validate</string>
    <string name="audit_object_button_terminate">Finish</string>
    <string name="audit_object_update_object_title">Modify a path element</string>
    <string name="audit_object_update_object_button">To modify this path element</string>

    <string name="audit_object_remove_object_title">Object deletion</string>
    <string name="audit_object_remove_object_message">This path element will be removed</string>
    <string name="audit_object_remove_object_button">Remove</string>
...


    <!-- Ask to test audit object now Dialog -->
    <string name="audit_object_now_title">To test element</string>
    <string name="do_you_want_to_test_audit_object_now">Do you want to test this element accessibility?</string>
    <string name="test_later">Test it later</string>
    <string name="test_now">Test it now</string>
    <string name="remember_test_now_answer">Remember my choice</string>




    <!-- activity detail status  accessibility -->
    <string name="status_OK">Accessible</string>
...
