<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Software Name: OCARA
  ~
  ~ SPDX-FileCopyrightText: Copyright (c) 2015-2020 Orange
  ~ SPDX-License-Identifier: MPL v2.0
  ~
  ~ This software is distributed under the Mozilla Public License v. 2.0,
  ~ the text of which is available at http://mozilla.org/MPL/2.0/ or
  ~ see the "license.txt" file for more details.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.orange.ocara.ui.view.PagerSlidingTabStrip
        android:id="@+id/tabs"
        style="@style/CustomPagerSlidingTab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tabHeight" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <com.orange.ocara.ui.view.AuditObjectsView_
        android:id="@+id/audited_objects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/divider" />

    <include layout="@layout/buttonbar" />

</LinearLayout>
